<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_recientes"
            android:icon="@drawable/ic_reciente"
            android:title="@string/menu_recientes" />
        <item
            android:id="@+id/nav_frequentes"
            android:icon="@drawable/ic_frecuente"
            android:title="@string/menu_frecuentes" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/menu_config" />

    </group>

</menu>